# This file is part of masscanned.
# Copyright 2021 - The IVRE project
#
# Masscanned is free software: you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Masscanned is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
# or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public
# License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Masscanned. If not, see <http://www.gnu.org/licenses/>.

[package]
name = "masscanned"
version = "0.2.0"
authors = ["_Frky <3105926+Frky@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bitflags = "2.9.1"
byteorder = "1.5.0"
chrono = "0.4.41"
clap = "4.5.39"
dns-parser = "0.8.0"
flate2 = "1.1"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.27"
pcap = "2.2.0"
pcap-file = "2.0.0"
pnet = { version = "0.33.0", features = ["std"] }
rand = "0.9.1"
siphasher = "1.0"
stderrlog = "0.6.0"
strum = "0.27.1"
strum_macros = "0.27.1"

[[bin]]
name = "masscanned"
path = "src/masscanned.rs"
